--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
-  background: url("../images/background.jpg") no-repeat center center fixed;
+  background: url("../Image/background.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
