--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,11 @@ html {
   font-size: 1em; /* 폰트 크기 조정 */
 }
 
-.contact-form #message {
-  grid-column: span 2; /* 메시지 입력 창을 두 열에 걸쳐 배치 */
+.contact-form .form-group3 {
+  grid-column: 1 / 3; /* 메시지 입력 창을 두 열에 걸쳐 배치 */
+}
+
+.form-group3 #message {
   height: 60px; /* 메시지 입력 창 높이 */
 }
 
@@ -118,6 +121,11 @@ html {
 }
 
 .contact-form label {
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.contact-form .form-group3 label {
   margin-bottom: 8px;
   font-weight: bold;
 }
