--- a/css/styles.css
+++ b/css/styles.css
@@ -99,20 +99,10 @@ html {
 /* 각 항목 개별 스타일 */
 .contact-form #name {
   grid-column: 1 / 2; /* 첫 번째 열에 배치 */
-  font-size: 1.1em; /* 폰트 크기 조정 */
 }
 
 .contact-form #email {
   grid-column: 2 / 3; /* 두 번째 열에 배치 */
-  font-size: 1em; /* 폰트 크기 조정 */
-}
-
-.contact-form .form-group3 {
-  grid-column: 1 / 3; /* 메시지 입력 창을 두 열에 걸쳐 배치 */
-}
-
-.form-group3 #message {
-  height: 60px; /* 메시지 입력 창 높이 */
 }
 
 .contact-form .form-group {
@@ -125,18 +115,29 @@ html {
   font-weight: bold;
 }
 
+/* form-group3의 label과 textarea 간 간격 */
 .contact-form .form-group3 label {
-  margin-bottom: 8px;
-  font-weight: bold;
+  margin-bottom: 8px; /* 메시지 텍스트와 메시지 창 간 간격 */
+}
+
+/* form-group3 전체 스타일 */
+.contact-form .form-group3 {
+  grid-column: 1 / 3; /* 메시지 입력 창을 두 열에 걸쳐 배치 */
+  margin-top: 0; /* 위의 입력창과 간격을 제거 */
+}
+
+.form-group3 #message {
+  height: 60px; /* 메시지 입력 창 높이 */
 }
 
 /* 입력 필드와 메시지 창 */
 .contact-form input,
 .contact-form textarea {
+  font-family: sans-serif; /* 폰트를 sans-serif로 통일 */
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  font-size: 1em;
+  font-size: 0.9em;
   outline: none;
   width: 100%; /* 각 열 꽉 채우게 */
   box-sizing: border-box; /* 패딩 포함 크기 계산*/
