--- a/css/styles.css
+++ b/css/styles.css
@@ -116,14 +116,18 @@ html {
 }
 
 /* form-group3의 label과 textarea 간 간격 */
-.contact-form .form-group3 label {
+.contact-form .form-group3 > label {
   margin-bottom: 8px; /* 메시지 텍스트와 메시지 창 간 간격 */
+  font-weight: bold;
 }
 
 /* form-group3 전체 스타일 */
 .contact-form .form-group3 {
   grid-column: 1 / 3; /* 메시지 입력 창을 두 열에 걸쳐 배치 */
-  margin-top: 0; /* 위의 입력창과 간격을 제거 */
+}
+
+.contact-form #message {
+  margin-top: 8px;
 }
 
 .form-group3 #message {
